# Advent-of-Code---Save-Christmas-2023

./: .gitignore  README.md  pyproject.toml
Other_things_I_learned/: my_note
Other_things_I_learned/C++_Implement_heap/: my_note
Other_things_I_learned/C++_Implement_heap/src/: MinIntHeap.cpp  MinIntHeap.h  main.cpp
Problems/: D1.html  style.css
Python/: D10_1.py  D10_2.py  D11_1.py  D11_2.py  D12_1.py  D12_1_better.py  D12_1_evenBetter.py  D12_2.py  D13_1.py  D13_1_better.py  D13_2.py  D14_1.py  D14_2_1_cache_but_still_slow.py  D14_2_1_too_slow.py  D14_2_2_better_but_still_slow.py  D14_2_2_cache_works_for_small_case.py  D14_2_3_the_best.py  D14_2_3_try_to_find_cycle_it_worked.py  D15_1.py  D15_2.py  D16_1.py  D16_1_recursion_but_loops.py  D16_2.py  D17_1.py  D17_1_Dijkstra_doesnt_work.py  D17_2.py  D18_1.py  D18_1_better.py  D18_2.py  D18_2_too_slow.py  D19_1.py  D19_2.py  D19_2_too_slow.py  D1_1.py  D1_2.py  D20_1.py  D20_1_check_loop.py  D20_2.py  D21_1.py  D21_1_better.py  (+47 more)
